# i8051

./: Cargo.toml  README.md  justfile
crates/i8051/: Cargo.toml  README.md
crates/i8051-debug-tui/: Cargo.toml  README.md
crates/i8051-debug-tui/src/: lib.rs
crates/i8051-disassembler/: Cargo.toml  README.md
crates/i8051-disassembler/examples/: disasm.rs
crates/i8051-disassembler/samples/: 6502_functional_test.dsl  README.md  lk201-6805.dsl  lk201-8051.dsl
crates/i8051-disassembler/src/: address.rs  command.rs  completeness.rs  data.rs  db.rs  diff.rs  labels.rs  lib.rs  note.rs  pattern.rs  platform.rs  region.rs  sdas.rs  strings.rs
crates/i8051-disassembler/src/analysis/: completeness.rs  graph.rs  mod.rs
crates/i8051-disassembler/src/commands/: auto_disassemble.rs  bytes.rs  comment.rs  cpu.rs  equivalent.rs  extent.rs  function.rs  label.rs  mod.rs  note.rs  operand.rs
crates/i8051-disassembler/src/platform/: i8051.rs  m6805.rs  mos6502.rs
crates/i8051-disassembler/src/region/: weak.rs  xrefs.rs
crates/i8051-disassembler/src/render/: data.rs  mod.rs  sdas.rs
crates/i8051-disassembler/src/store/: de.rs  error.rs  fields.rs  lexer.rs  mod.rs  parser.rs  ser.rs  value.rs
crates/i8051-disassembler/tests/: mos6502_pipeline.rs  testbed.rs
crates/i8051-proc-macro/: Cargo.toml  README.md
crates/i8051-proc-macro/src/: lib.rs
crates/i8051-test-runner/: Cargo.toml
crates/i8051-test-runner/src/: main.rs
crates/i8051/benches/: decode.rs
crates/i8051/src/: breakpoint.rs  cpu.rs  lib.rs  memory.rs  op.rs  peripheral.rs  regs.rs  sfr.rs  traits.rs
crates/i8051/tests/: decode_test.rs  decode_test.txt
crates/m6805/: Cargo.toml
crates/m6805/src/: lib.rs  op.rs
crates/m6805/tests/: decode_test.rs  reference_test.rs  reference_test.txt
crates/mos6502/: Cargo.toml
crates/mos6502/src/: lib.rs  op.rs
crates/mos6502/tests/: decode_test.rs  decode_test.txt
tests/: math.c  mul.c  smoketest.asm
tests/asm/: all_ops.asm  all_ops.out  arithmetic.asm  arithmetic.out  loop.asm  loop.out  smoketest.out
tests/c/: math.out  mul.out  smoketest.c  smoketest.out  timer.c  timer.out
