[package]
name = "i8051-debug-tui"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
i8051.workspace = true
ratatui = "0.29"
tui-textarea = { version = "0.7.0", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3"
