[package]
name = "i8051-debug-tui"
description = "A TUI for debugging the i8051 microcontroller emulator."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
i8051.workspace = true
ratatui = "0.30.0-beta.0"
tracing = "0.1"
tracing-subscriber = "0.3"
