[package]
name = "i8051-disassembler"
description = "An i8051 disassembler, useful for structured disassembly."
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
i8051.workspace = true
regex = "1.12"
rangemap = "1.7.1"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
leiden_rs = "0.8.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
hex-literal = "1.1"
tempfile = "3"
