[package]
name = "i8051-disassembler"
description = "An i8051 disassembler, useful for structured disassembly."
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[features]
default = []
analysis = ["leiden-rs"]

[dependencies]
i8051.workspace = true
regex = "1.12"
rangemap = "1.7.1"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
leiden-rs = { version = "0.8.1", optional = true }
scattered-collect = "0.21.2"

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.0"
hex-literal = "1.1"
tempfile = "3"
serde_json = "1.0"
